--- a/openidconnect/pubspec.yaml
+++ b/openidconnect/pubspec.yaml
@@ -27,6 +27,10 @@ dependencies:
   # TODO Remove these once native implementations can be added. Refactor so that the native implementations don't need to do the full cycle through.
   webview_flutter: ^2.0.10
 
+  # ML added cookie manager to allow clearing
+  webview_cookie_manager: ^2.0.1
+
+
 dev_dependencies:
   pedantic: ^1.10.0
   flutter_test:
