--- a/openidconnect/pubspec.yaml
+++ b/openidconnect/pubspec.yaml
@@ -25,8 +25,9 @@ dependencies:
   retry: ^3.1.0
 
   # TODO Remove these once native implementations can be added. Refactor so that the native implementations don't need to do the full cycle through.
-  webview_flutter: ^3.0.4
-
+  # webview_flutter: ^3.0.4
+  flutter_inappwebview: ^5.3.2
+  
 dev_dependencies:
   flutter_lints: ^2.0.1
   flutter_test:
